[project]
name = "nodes2sql"
version = "0.1.0"
description = "Grabs Nodes from meshtastic nodedb and stuffs them into sqlite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "meshtastic",
]
platform = "linux"

[tool.uv]
#override-dependencies = ["bleak==0.22.3"]

[tool.uv.sources]
meshtastic = { git = "https://github.com/meshtastic/python.git", branch = "master" }
